lab1/Test/L1-A-11-60.cmm
struct WkH ( YbgZ8l7spX4cl75TO0g , QLM3D8w [ 521822978 
  ] 

;
int ;] 
struct eueRdMP mJOeOK0lSGoUldw2Qj7 ( struct rS_OUOYe36vzTCvzt78 
  struct YS1PM4qMB3h7ZHi s , X0F3GX ;
}WxP8Mx05D0bUZQ ) {
  float dl = MLz ;
  return _ = Li || ICN && k6WPkhalHr4nq4syN2 >= mp9XDLt7NqkQn8lKFqs9 
    * - ! e1C2dxU1LN4iWguj ( jUmdFEO + [ NgP2 == - ! ( 
    WIaZFlT2O_3FS = nn7n6zDib32ozoWb > eXZF + ( hWBUgEX9Epk7chktRbwg 
    < ! ! ( eR1ji6z8SQMNr9oY0jBQ = gi <= ( ySJQEB8oCva 
    = K4jS9LgdBqOoYvL || dwLHmfzGsei2kPC && fILBKXX5 != 
    G6ffmGM [ LeX3LXkEVXJXRcOr_ && cYpVC7vD * - ( FKIjjdjTIbC1TQh 
    = srVJr = GGB4Ukorfpuk_R && ( O4KlGNA7u * - fcNphl4sVLdh 
    ( iqN , TH2zEaUIyEJzAn ) && ruLyHTyTNGPTOen_ . APMAiH 
    ) ) - - YL9_rjpcFNWhg3_ ] ) . Pwd6h2aF3WBHPsau / ! 
    pcfG ) ) . F2z2 != - 1662167489.779166350 ) * 1710768294 
    . x8cbffHbfiYB3EwPR8L - yPxC ( ) / Z80zJzLR7x ] ) 
    ;
}
int ;
struct {
}DdZRGldIbyRzYxF4 
;
int kc ( ) {
  if ( Nr31tT   if ( dKY6VIYm1XMYZLYM4cf )   P3 ;
else   if ( HUDf6a )   mzYsACLb37S ;
else   if ( PpeUYXjblHjC67y )   if ( W7GF )   while 
    ( BsGtxm6Yh ) {
  }
else   nD75YVr1yw ;





}
int ;
int NBvP2y ( int nI7JtgWX , int _ ) {
}
